--- a/style.css
+++ b/style.css
@@ -56,4 +56,10 @@ body {
     border-radius: 4px;
     cursor:pointer;
     text-align: left;
+    transition: all 0.4s ease;
+}
+
+.btn:hover{
+    background: #174b9e;
+    color:#fff;
 }
