--- a/style.css
+++ b/style.css
@@ -63,3 +63,25 @@ body {
     background: #174b9e;
     color:#fff;
 }
+
+#next-btn{
+    background: #174b9e;
+    color:#fff;
+    font-weight: 500;
+    width:15%;
+    border:1px solid #222;
+    padding:10px;
+    margin:20px auto 0;
+    border-radius: 4px;
+    cursor:pointer;
+    text-align:right;
+    display:none;
+}
+
+#nx{
+    width:25%;
+    filter: invert(1);
+    transform: scale(1.1);
+    position:relative;
+    top:2px;
+}
