--- a/style.css
+++ b/style.css
@@ -59,9 +59,12 @@ body {
     transition: all 0.4s ease;
 }
 
-.btn:hover{
+.btn:hover:not([disabled]){
     background: #174b9e;
     color:#fff;
+}
+.btn:disabled{
+    cursor: no-drop;
 }
 
 #next-btn{
@@ -70,18 +73,19 @@ body {
     font-weight: 500;
     width:15%;
     border:1px solid #222;
-    padding:10px;
+    padding:8px;
+    padding-top: 10px;
+    padding-bottom:10px;
     margin:20px auto 0;
     border-radius: 4px;
     cursor:pointer;
-    text-align:right;
+    text-align:center;
     display:none;
 }
 
-#nx{
-    width:25%;
-    filter: invert(1);
-    transform: scale(1.1);
-    position:relative;
-    top:2px;
+.correct{
+    background: #9aeabc;
+}
+.wrong{
+    background: #ff9393;
 }
